test/must_fail/api/must_fail_ngspice_netlist2.ref
error: variable 'code' in function 'ngspice_netlist(code)' should be string
  [must_fail_ngspice_netlist2.ngjs:0:0] in <anonymous>()
    Internal.ngspice_netlist(2);
             ^

hint: function 'ngspice_netlist(code)' was called with 1 arguments
hint: argument #0 was 2 (number)

Stack trace (1 frames):
  [must_fail_ngspice_netlist2.ngjs:0:0] in <anonymous>()
    Internal.ngspice_netlist(2);
             ^

exit(7)
