test/must_fail/api/must_fail_ngspice_netlist2.ngjs
#!/usr/bin/env ngspicejs
// one string arg needed
// linter: ngspicejs-lint
"use strict";

Internal.ngspice_netlist(2);
